Prevent display overflow by using scientific notation for results

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ body {
   height: 100px;
   padding-right: 12px;
   color: #fff;
+  overflow: hidden;
 }
 
 /* BUTTONS */
